change: project structure -> separate controllers

--- a/views/index.html
+++ b/views/index.html
@@ -28,9 +28,6 @@
 	<!-- Angular Material Library -->
 	<!--<script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>-->
 
-	<!--Angular Modules-->
-    <script src="angular/ng-app.js"></script>
-
 	<!--Local styles-->
 	<link rel="stylesheet" href="styles/main.css">
 	<link rel="stylesheet" href="styles/tickets-board.css">
@@ -53,5 +50,13 @@
 	<footer class="container-fluid text-center">
   		<p>Powered by Node.js</p>
 	</footer>
+
+	<!--Angular Modules-->
+    <script src="angular/ng-app.js"></script>
+	<!--Controllers-->
+	<script src="angular/controllers/MainCtrl.js"></script>
+	<script src="angular/controllers/SubmitNewTicketCtrl.js"></script>
+	<script src="angular/controllers/TicketsBoardCtrl.js"></script>
+
 </body>
 </html>
