--- a/public/angular/views/submitForm.html
+++ b/public/angular/views/submitForm.html
@@ -12,12 +12,12 @@
                     Please select one:
                 </label>
                 <div class="col-md-8">
-                    <select id="ticketType" name="typeSelect" class="form-control" ng-model="newTicket.ticketType" required>
+                    <select id="ticketType" name="typeSelectField" class="form-control" ng-model="newTicket.ticketType" required>
                         <option value="normal" selected>normal</option>
                         <option value="important">important</option>
                         <option value="urgent">urgent</option>
                     </select>
-                    <span ng-show="newTicketForm.typeSelect.$touched && newTicketForm.typeSelect.$invalid">Please select ticket type.</span>
+                    <span ng-show="newTicketForm.typeSelectField.$touched && newTicketForm.typeSelectField.$invalid">Please select ticket type.</span>
                 </div>
             </div>
             <div class="form-group">
@@ -44,7 +44,8 @@
                 </label>
                 <div class="col-md-8">
                     <input type="email" id="email" name="emailField" class="form-control" placeholder="full address" data-error="Bruh, that email address is invalid" ng-model="newTicket.email" required/>
-                    <span ng-show="newTicketForm.emailField.$touched && newTicketForm.emailField.$invalid">E-mail address is required.</span>
+                    <span ng-show="newTicketForm.emailField.$touched && newTicketForm.emailField.$pristine">E-mail address is required.</span>
+                    <span ng-show="newTicketForm.emailField.$dirty && newTicketForm.emailField.$invalid">E-mail address is invalid.</span>
                 </div>
             </div>
             <div class="form-group">
@@ -52,8 +53,8 @@
                     Please describe your question:
                 </label>
                 <div class="col-md-8">
-                    <textarea rows="3" id="question" class="form-control" ng-model="newTicket.question" required/>
-                    <span ng-show="newTicketForm.emailField.$touched && newTicketForm.emailField.$invalid">Question is required.</span>
+                    <textarea rows="3" id="question" name="questionField" class="form-control" ng-model="newTicket.question" required/>
+                    <span ng-show="newTicketForm.questionField.$touched && newTicketForm.questionField.$invalid">Question is required.</span>
                 </div>
             </div>
             <!--<div class="form-group">
@@ -68,11 +69,28 @@
                 <label for="button" class="col-md-4 control-label">
                 </label>
                 <div class="col-md-8">
-                    <button type="button" class="btn btn-primary" ng-click="submitForm()" value="Submit">Submit</button>
+                    <button type="button" class="btn btn-primary" 
+                    ng-disabled="newTicketForm.typeSelectField.$pristine ||
+                                 newTicketForm.firstNameField.$pristine ||
+                                 newTicketForm.lastNameField.$pristine ||
+                                 newTicketForm.emailField.$pristine ||
+                                 newTicketForm.questionField.$pristine ||
+                                 newTicketForm.typeSelectField.$touched && newTicketForm.typeSelectField.$invalid ||
+                                 newTicketForm.firstNameField.$touched && newTicketForm.firstNameField.$invalid ||
+                                 newTicketForm.lastNameField.$touched && newTicketForm.lastNameField.$invalid ||
+                                 newTicketForm.emailField.$touched && newTicketForm.emailField.$invalid ||
+                                 newTicketForm.questionField$touched && newTicketForm.questionField.$invalid" 
+                    ng-click="submitForm()" value="Submit">
+                    Submit
+                    </button>
+                    <span ng-show="newTicketForm.$submitted">Your ticket has been submitted successfully.</span>
                     <span class="reset" ng-click="resetForm()">Reset fields</span>
                 </div>
             </div>
 
         </form>
+
+	    <button class="btn-primary" ng-click=redirect()>Redirect</button>
+
     </div>
 </div>
