--- a/views/index.html
+++ b/views/index.html
@@ -30,6 +30,7 @@
 
 	<!--Local styles-->
 	<link rel="stylesheet" href="styles/main.css">
+	<link rel="stylesheet" href="styles/front-page.css">
 	<link rel="stylesheet" href="styles/tickets-board.css">
 	<link rel="stylesheet" href="styles/submit-form.css">
 
@@ -48,13 +49,13 @@
 	</div>
 
 	<footer class="container-fluid text-center">
-  		<p>Powered by Node.js</p>
+  		<!--<p>Powered by Node.js</p>-->
 	</footer>
 
 	<!--Angular Modules-->
     <script src="angular/ng-app.js"></script>
 	<!--Controllers-->
-	<script src="angular/controllers/MainCtrl.js"></script>
+	<script src="angular/controllers/FrontPageCtrl.js"></script>
 	<script src="angular/controllers/SubmitNewTicketCtrl.js"></script>
 	<script src="angular/controllers/TicketsBoardCtrl.js"></script>
 
