--- a/public/angular/views/submitForm.html
+++ b/public/angular/views/submitForm.html
@@ -9,15 +9,54 @@
             </div>
             <div class="form-group">
                 <label for="ticketType" class="col-md-4 control-label">
-                    Please select one:
+                    Please select type:
                 </label>
                 <div class="col-md-8">
                     <select id="ticketType" name="typeSelectField" class="form-control" ng-model="newTicket.ticketType" required>
+                        <option value="normal" selected>typeA</option>
+                        <option value="important">typeB</option>
+                        <option value="urgent">typeC</option>
+                    </select>
+                    <span ng-show="newTicketForm.typeSelectField.$touched && newTicketForm.typeSelectField.$invalid">Please select ticket type.</span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="ticketPriority" class="col-md-4 control-label">
+                    Please select priority:
+                </label>
+                <div class="col-md-8">
+                    <select id="ticketPriority" name="prioritySelectField" class="form-control" ng-model="newTicket.ticketPriority" required>
                         <option value="normal" selected>normal</option>
                         <option value="important">important</option>
                         <option value="urgent">urgent</option>
                     </select>
-                    <span ng-show="newTicketForm.typeSelectField.$touched && newTicketForm.typeSelectField.$invalid">Please select ticket type.</span>
+                    <span ng-show="newTicketForm.prioritySelectField.$touched && newTicketForm.prioritySelectField.$invalid">Please select ticket priority.</span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="application" class="col-md-4 control-label">
+                    Please select application:
+                </label>
+                <div class="col-md-8">
+                    <select id="application" name="applicationSelectField" class="form-control" ng-model="newTicket.application" required>
+                        <option value="normal" selected>appA</option>
+                        <option value="important">appB</option>
+                        <option value="urgent">appC</option>
+                    </select>
+                    <span ng-show="newTicketForm.applicationSelectField.$touched && newTicketForm.applicationSelectField.$invalid">Please select application name.</span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="region" class="col-md-4 control-label">
+                    Please select region:
+                </label>
+                <div class="col-md-8">
+                    <select id="region" name="regionSelectField" class="form-control" ng-model="newTicket.region" required>
+                        <option value="normal" selected>Region A</option>
+                        <option value="important">Region B</option>
+                        <option value="urgent">Region C</option>
+                    </select>
+                    <span ng-show="newTicketForm.regionSelectField.$touched && newTicketForm.regionSelectField.$invalid">Please select region.</span>
                 </div>
             </div>
             <div class="form-group">
