--- a/views/index.html
+++ b/views/index.html
@@ -58,6 +58,10 @@
 	<script src="angular/controllers/FrontPageCtrl.js"></script>
 	<script src="angular/controllers/SubmitNewTicketCtrl.js"></script>
 	<script src="angular/controllers/TicketsBoardCtrl.js"></script>
+	<script src="angular/controllers/SingleTicketPageCtrl.js"></script>
+
+	<!--Services-->
+	<script src="angular/services/checkTicketSrv.js"></script>
 
 </body>
 </html>
