improve ticket service

--- a/public/angular/views/singleTicketPage.html
+++ b/public/angular/views/singleTicketPage.html
@@ -2,7 +2,7 @@
     <h1>Ticket info page</h1>
     <p>Feel free to edit ticket details if needed or post a comment to resolver.</p>
     <br>
-    <h3 style="color:red;">Active ticket: {{ activeTicket }}</h3>
+    <h3 style="color:red;">Active ticket: {{ activeTicket.data.id }}</h3>
     <div class="col-md-6">
         <h4>Ticket details</h4>
         <p>You can edit some parts</p>
