--- a/views/index.html
+++ b/views/index.html
@@ -39,7 +39,19 @@
 
 	<header class="container-fluid">
 		<h1 class="title">Welcome to the IBP Support website</h1>
-		<h3 class="description">Site is in development phase..</h3> <a href="#/submit/new-ticket">Submit new Ticket</a> or <a href="#/show/all-tickets">Show all submitions</a>
+		<h3 class="description">Site is in development phase..</h3> 
+		<nav class="navbar navbar-default">
+			<div class="container-fluid">
+				<div class="navbar-header">
+				<a class="navbar-brand" href="#">No logo</a>
+				</div>
+				<ul class="nav navbar-nav">
+				<li><a href="#/main">Main</a></li>
+				<li><a href="#/submit/new-ticket">Submit ticket</a></li>
+				<li><a href="#/show/all-tickets">All tickets</a></li>
+				</ul>
+			</div>
+		</nav>
 	</header>
 
 	<div class="container-fluid">
